--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+body{
+  background-color: #0d1117;
+  color:#c9d1d9;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+  width: 600px;
+  margin: auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main li{
+  font-size: 20px;
+}
+.split{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+input[type=button]{
+  font-size: 18px;
+  padding: 8px 20px;
+  margin-left: 21px;
+  border-radius: 5px;
+  border: 1px solid grey;
+  background-color: #21262d;
+  color:#ffffff;
+  border-color:rgba(240,246,252,0.1);
+  cursor: pointer;
+  transition: 0.2s ease all;
 }
+input[type=button]:hover{
+  border-color:#8b949e;
+  background-color: #30363d;
+}
+.multipleButtons{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.download{
+  background-color: #1f6feb;
+}
+.title{
+  font-size: 1.1em;
+    font-weight: bold;
+    margin-bottom: 0.9em;
+}
+.detailList{
+  padding: 1em 1.3em !important;
+  background-color: #161b22;
+  border-radius: 5px;
+}
+.detailList li{
+  margin-bottom: 0.9em;
+}
+.detailList li:last-child{
+  margin:0
+}
+h2{
+  border-bottom: 1px solid #21262C;
+  padding-bottom: 0.3em;
 }
