--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,25 @@ img{
   object-fit: cover;
   object-position: right;
 }
+.nav{
+  display: flex;
+}
+.nav label{
+  width: 100%;
+  text-align: center;
+  line-height: 64px;
+  font-size: 22px;
+  border-bottom: 2px solid #21262c;
+  cursor: pointer;
+  user-select: none;
+}
+.nav label:hover{
+  border-color: #ff00005e;
+}
+.selectedButton{
+  color: red;
+  border-color: red !important;
+}
+.nav input{
+  display: none;
+}
