--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@ body{
   color:#c9d1d9;
 }
 .main{
-  width: 100%;
+  width: 96%;
   max-width: 47em;
   margin: auto;
   margin-bottom: 4em;
   margin-top: 5em;
+  padding: 0px 2%;
 }
 .main ul{
   list-style-type: none;
@@ -58,7 +59,6 @@ input[type=button]:hover{
 h2{
   border-bottom: 1px solid #21262C;
   padding-bottom: 0.3em;
-  padding-left: 0.3em;
 }
 .summary{
   color: #8b949e;
@@ -84,13 +84,6 @@ h2{
   font-size: 90%;
   overflow-x: auto;
   white-space: nowrap;
-}
-img{
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-  object-fit: cover;
-  object-position: right;
 }
 .nav{
   position: fixed;
