--- a/src/App.css
+++ b/src/App.css
@@ -121,3 +121,14 @@ h2{
 a{
   color: #0088ff;
 }
+.alert{
+  background-color: #ff2f2f;
+  font-size: 1.3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  padding: 6px 12px;
+  color: white;
+  text-align: center;
+}
