--- a/src/App.css
+++ b/src/App.css
@@ -126,9 +126,13 @@ a{
   font-size: 1.3em;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border-radius: 5px;
   padding: 6px 12px;
   color: white;
-  text-align: center;
+}
+.alert input{
+  background-color: transparent !important;
+  font-size: 22px;
+  border: none;
 }
